Fix spacing between section on the frontpage

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -124,7 +124,7 @@
 
 @media screen and (max-width: 700px) {
   .footer {
-    padding: 30px 50px 100px 50px;
+    padding: 30px 50px 30px 50px;
     align-items: center;
   }
 
